tests/parser/functions_without_end/invalid_01.m.out
In invalid_01.m, line 18
|         function c
|         ^^^^^^^^ error: this function must be terminated with end
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
