tests/parser/functions_without_end/invalid_01.m
% (c) Copyright 2020 Florian Schanda

% In a script file functions always need an end

a;

function a
    x = 1;

    %% foo

    function b

        y = 2;

        %|

        function c
